--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             </li>
         </ul>
         <section id="new-task">
-            <button>New Task</button>
+            <button onclick="location.href='add-task.html'">New Task</button>
         </section>
         <ul id="normal-priorities">
             <li>
