Added placeholder links

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <meta name="keywords" content="CSE 134B, HTML5, Client Side Web Languages">
         <meta name="author" content="teamMe">
         <meta name="robots" content="noindex">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">    
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="css/global.css">
 
         <style>
           * {
-              box-sizing: border-box; 
+              box-sizing: border-box;
           }
           body {
               display: flex;
@@ -234,23 +234,23 @@
       <h2>10/31/2017 4:00PM</h2>
       <ul>
         <li>
-            <a href="">Today (5)</a>
+            <a href="index.html">Today (5)</a>
             <p>ETA 3hrs</p>
         </li>
         <li>
-            <a href="">Tomorrow (3)</a>
+            <a href="index.html">Tomorrow (3)</a>
             <p>ETA 2hrs</p>
         </li>
         <li>
-            <a href="">Thursday</a>
+            <a href="index.html">Thursday</a>
             <p>ETA 1.5hrs</p>
         </li>
         <li>
-            <a href="">This Week</a>
+            <a href="index.html">This Week</a>
             <p>ETA 20hrs</p>
         </li>
         <li class="last">
-            <a href="">This Month</a>
+            <a href="index.html">This Month</a>
             <p>ETA 40hrs</p>
         </li>
       </ul>
@@ -258,18 +258,18 @@
     <section id="dashboard">
         <menu>
                     <ul>
-                        <li class="clock"><a href=""><img src="img/clock.png" /></a></li>
-                        <li class="exclaimation"><a href=""><img src="img/exclamation.png" /></a></li>
-                        <li><a href=""><img src="img/drag.png" /></a></li>
-                        <li class="search"><input type="text" name="search" /><img src="img/search.png" /></li>
-                        <li><a href=""><img src="img/gear.png" /></a></li>
+                        <li class="clock"><a href="placeholder.html"><img src="img/clock.png" /></a></li>
+                        <li class="exclaimation"><a href="placeholder.html"><img src="img/exclamation.png" /></a></li>
+                        <li><a href="placeholder.html"><img src="img/drag.png" /></a></li>
+                        <li class="search"><input type="text" name="search" /> <a href="placeholder.html"><img src="img/search.png"/><a></li>
+                        <li><a href="placeholder.html"><img src="img/gear.png" /></a></li>
                     </ul>
         </menu>
         <ul id="top-priorities">
             <li class="first">
                 <section class="index">1</section>
                 <section class="sticky">
-                    <p class="message"><a href="">Pickup kids from school</a>
+                    <p class="message"><a href="placeholder.html">Pickup kids from school</a>
                         <p class="time">4pm</p>
                     </p>
                 </section>
@@ -277,7 +277,7 @@
             <li>
                 <section class="index">2</section>
                 <section class="sticky">
-                    <p class="message"><a href="">Doctor Appointment</a>
+                    <p class="message"><a href="placeholder.html">Doctor Appointment</a>
                         <p class="time">5pm</p>
                     </p>
                 </section>
@@ -285,7 +285,7 @@
             <li class="last">
                 <section class="index">3</section>
                 <section class="sticky">
-                    <p class="message"><a href="">PT conf w/ Mr. Mell</a>
+                    <p class="message"><a href="placeholder.html">PT conf w/ Mr. Mell</a>
                         <p class="time">6:20pm</p>
                     </p>
                 </section>
@@ -298,14 +298,14 @@
             <li>
                 <ul class="item">
                     <li class="number">4</li>
-                    <li class="name"><a href="">Appointment with Raul</a></li>
+                    <li class="name"><a href="placeholder.html">Appointment with Raul</a></li>
                     <li class="duration">2 hours</li>
                 </ul>
             </li>
             <li>
                 <ul class="item">
                     <li class="number">5</li>
-                    <li class="name"><a href="">Retirment Planning</a></li>
+                    <li class="name"><a href="placeholder.html">Retirement Planning</a></li>
                     <li class="duration">1 hour</li>
                 </ul>
             </li>
