--- a/empty.html
+++ b/empty.html
@@ -237,30 +237,30 @@
 </head>
 <body>
   <header>
-      <h1>ScheduleMate - Add Task</h1>
+      <h1>ScheduleMate - Empty</h1>
   </header>
   <main>
     <nav>
       <h2>10/31/2017 4:00PM</h2>
       <ul>
         <li>
-            <a href="empty.html">Today (5)</a>
+            <a href="">Today (5)</a>
             <p>ETA 3hrs</p>
         </li>
         <li>
-            <a href="empty.html">Tomorrow (3)</a>
+            <a href="">Tomorrow (3)</a>
             <p>ETA 2hrs</p>
         </li>
         <li>
-            <a href="empty.html">Thursday</a>
+            <a href="">Thursday</a>
             <p>ETA 1.5hrs</p>
         </li>
         <li>
-            <a href="empty.html">This Week</a>
+            <a href="">This Week</a>
             <p>ETA 20hrs</p>
         </li>
         <li class="last">
-            <a href="empty.html">This Month</a>
+            <a href="">This Month</a>
             <p>ETA 40hrs</p>
         </li>
       </ul>
@@ -268,47 +268,17 @@
     <section id="dashboard">
         <menu>
                     <ul>
-                        <li class="clock"><a href="empty.html"><img src="img/clock.png" /></a></li>
-                        <li class="exclaimation"><a href="empty.html"><img src="img/exclamation.png" /></a></li>
-                        <li><a href="empty.html"><img src="img/drag.png" /></a></li>
+                        <li class="clock"><a href=""><img src="img/clock.png" /></a></li>
+                        <li class="exclaimation"><a href=""><img src="img/exclamation.png" /></a></li>
+                        <li><a href=""><img src="img/drag.png" /></a></li>
                         <li class="search"><input type="text" name="search" /><img src="img/search.png" /></li>
-                        <li><a href="empty.html"><img src="img/gear.png" /></a></li>
+                        <li><a href=""><img src="img/gear.png" /></a></li>
                     </ul>
         </menu>
-        <section id="add-task">
-            <h2>Add Task</h2>
-            <form name="add-task" method="POST" action="">
-                <label>Task</label>                
-                <input type="text" name="task-name">
-                <label>Priority:</label>
-                <select>
-                    <option value="High">High</option>
-                    <option value="Medium">Medium</option>
-                    <option value="Low">Low</option>
-                </select>
-                <label>Estimated Time:</label>
-                <input type="text" name="est-time">Estimated Time</input>
-                <label>Notes:</label>
-                <textarea name="notes"></textarea>
-            </form>
-
-            <script type="text/javascript">
-                function AddTask() {
-                    alert("Task Added!");  
-                    location.href='index.html';
-                }
-            </script>
-            <ul id="add-task-buttons">
-                <li>
-                    <button onclick="AddTask()">Add Task</button>
-                </li>
-                <li>
-                    <button onclick="location.href='index.html'">Cancel</button>
-                </li>
-            </ul>
-
-
-
+        <section id="content">
+            <h2>Placeholder page</h2>
+            <p>Coming Soon!</p>
+            <button onclick="location.href='index.html'">Go Back</button>
         </section>
   
 
