--- a/add-task.html
+++ b/add-task.html
@@ -71,7 +71,6 @@
           }
           main > nav {
               flex: 0 0 15vw;
-              min-width: 12rem;
               padding: 0;
               background: white;
               border-right: 1px solid black;
@@ -95,7 +94,7 @@
           nav h2 {
               font-size: 80%;
               text-align: center;
-              margin-bottom: 0;
+              margin: 0;
           }
           nav a {
               color: black;
@@ -190,14 +189,15 @@
           article, nav, aside {
               padding: 1em;
           }
+
           #add-task input, select, label {
-              display: block;
-              margin-bottom: 10px;
+                  display: block;
+                  margin-bottom: 10px;
           }
           #add-task-buttons {
                   list-style-type: none;
                   display: flex;
-                  margin: 0;
+                  margin: 10px 0 0 0;
                   padding: 0;
           }
 
@@ -227,13 +227,41 @@
               #main > article {
                   padding: 0 1rem 1em 1em;
               }
-              #team {
+              menu ul {
+                  justify-content: center;
+              }
+              menu ul li {
+                  padding: 7px 4px 0px 4px;
+              }
+              menu ul li.search {
+                  /*padding: 8px 10px 2px 10px;*/
+                  padding: 7px 4px 0px 4px;
+                  width: unset;
+              }
+              menu ul li.search input {
+                  display: none;
+              }
+              menu ul li.search img {
+                  position:unset;
+              }
+              #top-priorities {
                   flex-direction: column;
-                  margin: 0;
-                  padding: 0;
+              }
+              #top-priorities li {
+                  margin: 8px 0;
+              }
+              #top-priorities .index {
+                  display: none;
+              }
+              #normal-priorities li ul.item li.index {
+                  display: none;
+              }
+              #normal-priorities li ul.item li.duration {
+                  text-align: right;
               }
           }
         </style>
+
 </head>
 <body>
   <header>
@@ -241,8 +269,11 @@
   </header>
   <main>
     <nav>
-      <h2>10/31/2017 4:00PM</h2>
       <ul>
+        <li>
+            <a href="index.html"><img src="img/home.png" /></a>
+            <h2>10/31/2017 4:00PM</h2>
+        </li>          
         <li>
             <a href="empty.html">Today (5)</a>
             <p>ETA 3hrs</p>
@@ -267,13 +298,13 @@
     </nav>
     <section id="dashboard">
         <menu>
-                    <ul>
-                        <li class="clock"><a href="empty.html"><img src="img/clock.png" /></a></li>
-                        <li class="exclaimation"><a href="empty.html"><img src="img/exclamation.png" /></a></li>
-                        <li><a href="empty.html"><img src="img/drag.png" /></a></li>
-                        <li class="search"><input type="text" name="search" /><img src="img/search.png" /></li>
-                        <li><a href="empty.html"><img src="img/gear.png" /></a></li>
-                    </ul>
+            <ul>
+                <li class="clock"><a href="empty.html"><img src="img/clock.png" /></a></li>
+                <li class="exclaimation"><a href="empty.html"><img src="img/exclamation.png" /></a></li>
+                <li><a href="empty.html"><img src="img/drag.png" /></a></li>
+                <li class="search"><input type="text" name="search" /><img src="img/search.png" /></li>
+                <li><a href="empty.html"><img src="img/gear.png" /></a></li>
+            </ul>
         </menu>
         <section id="add-task">
             <h2>Add Task</h2>
@@ -287,7 +318,7 @@
                     <option value="Low">Low</option>
                 </select>
                 <label>Estimated Time:</label>
-                <input type="text" name="est-time">Estimated Time</input>
+                <input type="text" name="est-time">
                 <label>Notes:</label>
                 <textarea name="notes"></textarea>
             </form>
@@ -318,7 +349,7 @@
       <!--
         <a href='http://dryicons.com/icon-packs/symbolize-icons-set'> Icon by Dryicons </a>
       -->
-      CSE 170 Footer
+      &copy; 2017 Matrix
     </footer>
 </body>
 </html>
