--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
           }
           main > nav {
               flex: 0 0 15vw;
-              min-width: 12rem;
               padding: 0;
               background: white;
               border-right: 1px solid black;
@@ -95,7 +94,7 @@
           nav h2 {
               font-size: 80%;
               text-align: center;
-              margin-bottom: 0;
+              margin: 0;
           }
           nav a {
               color: black;
@@ -217,10 +216,37 @@
               #main > article {
                   padding: 0 1rem 1em 1em;
               }
-              #team {
+              menu ul {
+                  justify-content: center;
+              }
+              menu ul li {
+                  padding: 7px 4px 0px 4px;
+              }
+              menu ul li.search {
+                  /*padding: 8px 10px 2px 10px;*/
+                  padding: 7px 4px 0px 4px;
+                  width: unset;
+              }
+              menu ul li.search input {
+                  display: none;
+              }
+              menu ul li.search img {
+                  position:unset;
+              }
+              #top-priorities {
                   flex-direction: column;
-                  margin: 0;
-                  padding: 0;
+              }
+              #top-priorities li {
+                  margin: 8px 0;
+              }
+              #top-priorities .index {
+                  display: none;
+              }
+              #normal-priorities li ul.item li.index {
+                  display: none;
+              }
+              #normal-priorities li ul.item li.duration {
+                  text-align: right;
               }
           }
         </style>
@@ -231,8 +257,11 @@
   </header>
   <main>
     <nav>
-      <h2>10/31/2017 4:00PM</h2>
       <ul>
+        <li>
+            <a href="index.html"><img src="img/home.png" /></a>
+            <h2>10/31/2017 4:00PM</h2>
+        </li>
         <li>
             <a href="empty.html">Today (5)</a>
             <p>ETA 3hrs</p>
@@ -261,7 +290,7 @@
                         <li class="clock"><a href="empty.html"><img src="img/clock.png" /></a></li>
                         <li class="exclaimation"><a href="empty.html"><img src="img/exclamation.png" /></a></li>
                         <li><a href="empty.html"><img src="img/drag.png" /></a></li>
-                        <li class="search"><input type="text" name="search" /><img src="img/search.png" /></li>
+                        <li class="search"><input type="text" name="search" /><a href="empty.html"><img src="img/search.png" /></a></li>
                         <li><a href="empty.html"><img src="img/gear.png" /></a></li>
                     </ul>
         </menu>
@@ -297,14 +326,14 @@
         <ul id="normal-priorities">
             <li>
                 <ul class="item">
-                    <li class="number">4</li>
+                    <li class="index">4</li>
                     <li class="name"><a href="empty.html">Appointment with Raul</a></li>
                     <li class="duration">2 hours</li>
                 </ul>
             </li>
             <li>
                 <ul class="item">
-                    <li class="number">5</li>
+                    <li class="index">5</li>
                     <li class="name"><a href="empty.html">Retirment Planning</a></li>
                     <li class="duration">1 hour</li>
                 </ul>
@@ -315,9 +344,10 @@
 </main>
   <footer>
       <!--
+        Icons provided by Dryicons.
         <a href='http://dryicons.com/icon-packs/symbolize-icons-set'> Icon by Dryicons </a>
       -->
-      CSE 170 Footer
+      &copy; 2017 Matrix
     </footer>
 </body>
 </html>
