--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<!-- Login page code adapted and modified from https://www.w3schools.com/howto/howto_css_login_form.asp -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -18,23 +19,24 @@
 
             /* Full-width inputs */
             input[type=text], input[type=password] {
-                width: 100%;
+                width: 12%;
                 padding: 12px 20px;
                 margin: 8px 0;
                 display: inline-block;
                 border: 1px solid #ccc;
                 box-sizing: border-box;
             }
-
+			
             /* Set a style for all buttons */
             button {
-                background-color: #4CAF50;
+                background-color: #0067B1;
                 color: white;
                 padding: 14px 20px;
                 margin: 8px 0;
                 border: none;
                 cursor: pointer;
-                width: 100%;
+                width: 20%;
+				font-weight: bold;
             }
 
             /* Add a hover effect for buttons */
@@ -57,17 +59,19 @@
 
             /* Avatar image */
             img.avatar {
-                width: 40%;
+                width: 10%;
                 border-radius: 50%;
             }
 
             /* Add padding to containers */
             .container {
                 padding: 16px;
+				text-align: center;
             }
 
             /* The "Forgot password" text */
             span.psw {
+				font-weight: bold;
                 float: right;
                 padding-top: 16px;
             }
@@ -90,23 +94,24 @@
             <h1>ScheduleMate - Login</h1>
         </header>
         <main>
-            <form action="/action_page.php">
+            <form action="home.html">
                 <div class="imgcontainer">
-                    <img src="img_avatar2.png" alt="Avatar" class="avatar">
+                    <img src="img/login_pic.png" alt="Avatar" class="avatar">
                 </div>
 
                 <div class="container">
-                    <label><b>Username</b></label>
+                    <label><b>Username &nbsp;</b></label>
                     <input type="text" placeholder="Enter Username" name="uname" required>
-
-                    <label><b>Password</b></label>
+					<br>
+                    <label><b>Password &nbsp;</b></label>
                     <input type="password" placeholder="Enter Password" name="psw" required>
-
+					<br>
                     <button type="submit">Login</button>
+					<br>
                     <input type="checkbox" checked="checked"> Remember me
                 </div>
 
-                <div class="container" style="background-color:#f1f1f1">
+                <div class="container2" style="background-color:#f1f1f1">
                     <button type="button" class="cancelbtn">Cancel</button>
                     <span class="psw">Forgot <a href="#">password?</a></span>
                 </div>
