Updated and added forgot pw page

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>CSE 170: Mock Login Page</title>
+        <title>CSE 170: Mock Forgot Password Page</title>
         <meta name="description" content="CSE 170 - Web App">
         <meta name="keywords" content="CSE 170">
         <meta name="author" content="Matrix">
@@ -49,15 +49,15 @@
                 width: auto;
                 padding: 10px 18px;
                 background-color: #f44336;
-				border: none;
 				font-weight: bold;
-				color: white;
+				color: #ffffff;
+				border: none;
             }
 
-            /* Center the avatar image inside this container */
-            .imgcontainer {
+            /* Text formatting for forgot your password paragraph*/
+            .forgot_pw_text {
                 text-align: center;
-                margin: 24px 0 12px 0;
+                font-weight: bold;
             }
 
             /* Avatar image */
@@ -94,30 +94,28 @@
 
     <body>
         <header>
-            <h1>ScheduleMate - Login</h1>
+            <h1>ScheduleMate - Reset Password</h1>
         </header>
         <main>
-            <form action="home.html">
-                <div class="imgcontainer">
-                    <img src="img/login_pic.png" alt="Avatar" class="avatar">
+            <form action="forgot_password.html">
+                <div class="forgot_pw_text">
+                    <p>Forgot your password?<br>Enter in your e-mail to send a reset link.</p>
                 </div>
 
                 <div class="container">
-                    <label><b>Username &nbsp;</b></label>
-                    <input type="text" placeholder="Enter Username" name="uname" required>
+                    <label><b>E-mail &nbsp;</b></label>
+                    <input type="text" placeholder="Enter e-mail" name="emailfield" required>
 					<br>
-                    <label><b>Password &nbsp;</b></label>
-                    <input type="password" placeholder="Enter Password" name="psw" required>
+                    <button type="submit">Reset password</button>
 					<br>
-                    <button type="submit">Login</button>
-					<br>
-                    <input type="checkbox" checked="checked"> Remember me
                 </div>
 
                 <div class="container2" style="background-color:#f1f1f1">
-                    <input type="button" class="cancelbtn" value="Cancel" onclick="window.location.href='home.html'"/>
-                    <span class="psw">Forgot your <a href="forgot_password.html">password?</a></span>
+					<form>
+						<input type="button" class="cancelbtn" value="Go Back" onclick="window.location.href='login.html'"/>
+					</form>
                 </div>
+
             </form>
       </main>
       <footer>
