Updated cancel buttons

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -44,6 +44,11 @@
                 opacity: 0.8;
             }
 
+			/* Cancel button */
+			.cancelbtn:hover {
+                opacity: 0.8;
+            }
+			
             /* Extra style for the cancel button (red) */
             .cancelbtn {
                 width: auto;
