--- a/login.html
+++ b/login.html
@@ -43,6 +43,11 @@
             button:hover {
                 opacity: 0.8;
             }
+			
+			/* Cancel btn */
+			.cancelbtn:hover {
+                opacity: 0.8;
+            }
 
             /* Extra style for the cancel button (red) */
             .cancelbtn {
@@ -115,7 +120,7 @@
                 </div>
 
                 <div class="container2" style="background-color:#f1f1f1">
-                    <input type="button" class="cancelbtn" value="Cancel" onclick="window.location.href='home.html'"/>
+                    <!--<input type="button" class="cancelbtn" value="Cancel" onclick="window.location.href='home.html'"/>-->
                     <span class="psw">Forgot your <a href="forgot_password.html">password?</a></span>
                 </div>
             </form>
