fixed registration link

--- a/login.html
+++ b/login.html
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="container2" style="background-color:#f1f1f1">
-                    <input type="button" class="cancelbtn" value="Register" onclick="window.location.href='register.html'"/>
+                    <input type="button" class="cancelbtn" value="Register" onclick="window.location.href='registration.html'"/>
                     <span class="psw">Forgot your <a href="forgot_password.html">password?</a></span>
                 </div>
             </form>
