fixed dead link

--- a/registration.html
+++ b/registration.html
@@ -123,7 +123,7 @@
 
                 <div class="container2" style="background-color:#f1f1f1">
 					<form>
-						<input type="button" class="cancelbtn" value="Cancel" onclick="window.location.href='login.html'"/>
+						<input type="button" class="cancelbtn" value="Cancel" onclick="window.location.href='index.html'"/>
 					</form>
                 </div>
 
