--- a/forgot_password.html
+++ b/forgot_password.html
@@ -117,7 +117,7 @@
 
                 <div class="container2" style="background-color:#f1f1f1">
 					<form>
-						<input type="button" class="cancelbtn" value="Go Back" onclick="window.location.href='login.html'"/>
+						<input type="button" class="cancelbtn" value="Go Back" onclick="window.location.href='index.html'"/>
 					</form>
                 </div>
 
